fixing align text in logo and title

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -1,21 +1,26 @@
 html {
   scroll-behavior: smooth;
 }
-body{
+body {
   background-color: $cream;
-
 }
 
 header {
-  text-align: center;
-
-  .logo {
+  .logo-center {
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100vw;
     height: 66px;
     //border-bottom: 1px solid $blue;
+  }
+
+  .logo-right {
+    text-align: right;
+    padding: 20px;
+    a {
+      padding: 10px;
+    }
   }
 }
 
@@ -46,7 +51,7 @@ header {
     transform: translateY(50%);
     padding: 0 5%;
     min-width: 25%;
-    h1{
+    h1 {
       padding-bottom: 16px;
     }
   }
@@ -152,16 +157,23 @@ header {
 }
 
 .title {
-  text-align: left;
-  padding: 5vh 0 24px 5vw;
+
+  &__left{
+    text-align: left;
+    padding: 5vh 0 24px 5vw;
+  }
+  &__center{
+    text-align: center;
+    padding: 5vh 0 24px 0;
+  } 
+  
 }
-.title-slide{
+.title-slide {
   font-family: $font-sans-serif;
   font-size: 18px;
   letter-spacing: 0;
   text-transform: uppercase;
   font-weight: 600;
-
 }
 
 .section {
@@ -190,7 +202,6 @@ header {
     padding-left: 40px;
   }
 }
-
 
 .vertical-line {
   position: absolute;
