--- a/css/_navegation.scss
+++ b/css/_navegation.scss
@@ -1,13 +1,7 @@
 header {
   width: 100vw;
 }
-.header-container {
-  padding: 20px;
-  text-align: right;
-  a {
-    padding: 10px;
-  }
-}
+
 
 .menu {
   width: 100%;
